--- a/app/src/main/res/layout/task_view.xml
+++ b/app/src/main/res/layout/task_view.xml
@@ -7,7 +7,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Nouvelle tâche"
+        android:text="@string/new_tache"
         android:id="@+id/taskTextView"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
